fix : SearchBar overflow

--- a/client/src/components/Opportunities/Opportunities.module.css
+++ b/client/src/components/Opportunities/Opportunities.module.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-*{
+* {
 	font-family: 'Poppins', sans-serif;
 }
 
@@ -51,13 +51,13 @@
 .search_bar {
 	position: absolute;
 	top: 0;
-	left: 0; 
+	left: 0;
 	width: 100%;
 	height: 42.5px;
 	line-height: 30px;
 	outline: 0;
 	border: 0;
-	/* display:none; */
+	display: none;
 	font-size: 1em;
 	border-radius: 20px;
 	padding: 0 20px;
@@ -86,14 +86,14 @@
 	transform: translateX(20%);
 	margin-right: 70px;
 } */
-  
+
 /* here we are using ":focus-within" pseudo-class through which we can change styles when any of its descendants have focus */
 .searchbar_bg:hover,
 .searchbar_bg:focus-within {
-  width: 300px;
-  cursor: pointer;
-  transform: translateX(20%);
-  margin-right: 70px;
+	width: 300px;
+	cursor: pointer;
+	transform: translateX(20%);
+	margin-right: 70px;
 }
 
 .searchbar_bg:hover input {
@@ -112,13 +112,12 @@
 	}
 }
 
-  /* adding media query to handle dislocation of tags*/
+/* adding media query to handle dislocation of tags*/
 @media screen and (min-width: 800px) {
-	.base{
-		display:flex;
+	.base {
+		display: flex;
 		justify-content: space-around;
 		align-items: center;
 		width: 30%;
 	}
 }
-
